+ Changed context of introduction.md + Added submit-editorial.md + Fixed #post img for specific max size of image + Added some images + Changed truncate to 200 + Changed context in submit.html

--- a/css/screen.css
+++ b/css/screen.css
@@ -36,7 +36,7 @@ p {
 #disqus { background: #DEE6CF; padding: 10px; }
 #dsq-content { width: 575px; }
 #date { text-align: right; color: #333; font-size: 80%;}
-#post img { }
+#post img { max-width: 500px; max-height: 500px; }
 #feedburner {
   position: fixed;
   bottom: 0;
@@ -288,4 +288,9 @@ color: #aaa;
   padding: 5px;
   background: #AED180;
   margin-bottom: 20px;
+}
+
+
+hr {
+  border-bottom: 1px solid #EEE;
 }
